changes that are quick to clarify tutorials

--- a/tutorials/Multitask.ipynb
+++ b/tutorials/Multitask.ipynb
@@ -39,7 +39,7 @@
    "source": [
     "We first load our data.\n",
     "\n",
-    "The data dyptes for the multi-task setting mirror those of the single-task setting, but with an extra dimension for the number of tasks (t), and with the single-task cardinality (k) being replaced by multiple task-specific cardinalities (K_t):\n",
+    "The data types for the multi-task setting mirror those of the single-task setting, but with an extra dimension for the number of tasks (t), and with the single-task cardinality (k) being replaced by multiple task-specific cardinalities (K_t):\n",
     "\n",
     "* X: a t-length list of \\[n\\]-dim iterables of end model inputs OR a single \\[n\\]-dim iterable of inputs if all tasks operate on the same input\n",
     "* Y: a t-length list of \\[n\\]-dim numpy.ndarray of target labels (Y[i] $\\in$ {1,...,K_t})\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,19 +86,19 @@
     "T2: Y2 ∈ {HOSPITAL, OTHER ORG, NOT APPLICABLE}  \n",
     "\n",
     "Observe that the tasks are related by logical implication relationships: if Y0 = PERSON,\n",
-    "then Y2 = NOT APPLICABLE, since Y2 classifies ORGs. Thus, in this task structure, [PERSON, DOCTOR, NOT APPLICABLE] is a feasible label vector, whereas [PERSON, DOCTOR, HOSPITAL] is not."
+    "then Y2 = NOT APPLICABLE, since Y2 classifies ORGs. Thus, in this task structure, [PERSON, DOCTOR, NOT APPLICABLE] is a feasible label vector, whereas [PERSON, DOCTOR, HOSPITAL] is not. Also note that a prediction of NOT APPLICABLE here is assigned the class number 3, which is different than an abstain, assigned the number 0. If a labeling function is not relevant to an example, it can abstain, but a prediction of not applicable is an actual class prediction."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To reflect this feasible label set, we define our task graph for this problem with a TaskHierarchy, a subclass of TaskGraph which assumes that label K_t for each non-root node is the \"NOT APPLICABLE\" class."
+    "To reflect this feasible label set, we define our task graph for this problem with a TaskHierarchy, a subclass of TaskGraph which assumes that label K_t for each non-root node is the \"NOT APPLICABLE\" class. In the example below, the edges (0,1) and (0,2) indicate that task0 is a parent of task1 and that task0 is a parent of task2."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -148,11 +148,11 @@
      "text": [
       "Computing O...\n",
       "Estimating \\mu...\n",
-      "[E:0]\tTrain Loss: 2.785\n",
-      "[E:20]\tTrain Loss: 0.451\n",
-      "[E:40]\tTrain Loss: 0.053\n",
-      "[E:60]\tTrain Loss: 0.027\n",
-      "[E:80]\tTrain Loss: 0.026\n",
+      "[E:0]\tTrain Loss: 4.289\n",
+      "[E:20]\tTrain Loss: 0.559\n",
+      "[E:40]\tTrain Loss: 0.132\n",
+      "[E:60]\tTrain Loss: 0.032\n",
+      "[E:80]\tTrain Loss: 0.027\n",
       "[E:100]\tTrain Loss: 0.025\n",
       "[E:120]\tTrain Loss: 0.025\n",
       "[E:140]\tTrain Loss: 0.025\n",
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
        " \twith 846 stored elements in Compressed Sparse Row format>]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -219,7 +219,7 @@
        "0.9"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,13 +267,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Could not find kwarg \"input_modules\" in destination dict.\n",
+      "Could not find kwarg \"middle_modules\" in destination dict.\n",
+      "Could not find kwarg \"head_modules\" in destination dict.\n",
       "\n",
       "Network architecture:\n",
       "\n",
@@ -312,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -321,76 +324,75 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 25/25 [00:00<00:00, 161.90it/s]\n"
+      "100%|██████████| 25/25 [00:02<00:00, 10.17it/s, avg_loss=2.2] \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saving model at iteration 0 with best score 0.833\n",
-      "[E:0]\tTrain Loss: 2.260\tDev score: 0.833\n"
+      "Saving model at iteration 0 with best score 0.803\n",
+      "[E:0]\tTrain Loss: 2.196\tDev score: 0.803\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 25/25 [00:00<00:00, 230.25it/s]\n"
+      "100%|██████████| 25/25 [00:02<00:00, 11.41it/s, avg_loss=1.36]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saving model at iteration 1 with best score 0.930\n",
-      "[E:1]\tTrain Loss: 1.334\tDev score: 0.930\n"
+      "Saving model at iteration 1 with best score 0.913\n",
+      "[E:1]\tTrain Loss: 1.361\tDev score: 0.913\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 25/25 [00:00<00:00, 259.97it/s]\n"
+      "100%|██████████| 25/25 [00:02<00:00,  9.55it/s, avg_loss=1.02] \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saving model at iteration 2 with best score 0.937\n",
-      "[E:2]\tTrain Loss: 1.054\tDev score: 0.937\n"
+      "[E:2]\tTrain Loss: 1.024\tDev score: 0.890\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 25/25 [00:00<00:00, 256.49it/s]\n"
+      "100%|██████████| 25/25 [00:03<00:00,  7.66it/s, avg_loss=0.9]  \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[E:3]\tTrain Loss: 0.911\tDev score: 0.917\n"
+      "[E:3]\tTrain Loss: 0.900\tDev score: 0.890\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 25/25 [00:00<00:00, 258.90it/s]\n"
+      "100%|██████████| 25/25 [00:03<00:00,  8.24it/s, avg_loss=0.858]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[E:4]\tTrain Loss: 0.864\tDev score: 0.903\n",
-      "Restoring best model from iteration 2 with score 0.937\n",
+      "[E:4]\tTrain Loss: 0.858\tDev score: 0.880\n",
+      "Restoring best model from iteration 1 with score 0.913\n",
       "Finished Training\n",
-      "Accuracy: 0.937\n"
+      "Accuracy: 0.913\n"
      ]
     }
    ],
@@ -414,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -424,10 +426,10 @@
      "output_type": "stream",
      "text": [
       "Label Model:\n",
-      "Accuracy: 0.850\n",
+      "Accuracy: 0.857\n",
       "\n",
       "End Model:\n",
-      "Accuracy: 0.927\n"
+      "Accuracy: 0.920\n"
      ]
     }
    ],
@@ -450,16 +452,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy (t=0): 0.930\n",
-      "Accuracy (t=1): 0.920\n",
-      "Accuracy (t=2): 0.930\n"
+      "Accuracy (t=0): 0.920\n",
+      "Accuracy (t=1): 0.900\n",
+      "Accuracy (t=2): 0.940\n"
      ]
     }
    ],
@@ -476,30 +478,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[array([2, 1, 1, 2, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 1, 1, 1, 2,\n",
+       "[array([2, 1, 1, 2, 1, 2, 1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 1, 2, 1, 1,\n",
        "        2, 2, 2, 2, 1, 2, 1, 1, 1, 2, 1, 2, 2, 1, 1, 2, 1, 2, 2, 1, 1, 1,\n",
-       "        1, 1, 1, 1, 1, 2, 2, 1, 1, 1, 2, 1, 2, 1, 2, 2, 2, 1, 1, 2, 1, 2,\n",
+       "        1, 1, 1, 1, 1, 2, 2, 1, 1, 1, 2, 1, 2, 1, 1, 2, 1, 1, 1, 2, 2, 2,\n",
        "        1, 2, 1, 1, 2, 2, 1, 2, 1, 2, 2, 1, 1, 2, 1, 1, 1, 2, 2, 2, 2, 2,\n",
-       "        2, 2, 1, 1, 1, 1, 1, 2, 2, 2, 1, 1]),\n",
-       " array([3, 2, 1, 3, 2, 1, 2, 2, 1, 3, 3, 3, 3, 3, 3, 3, 3, 3, 2, 2, 2, 3,\n",
-       "        3, 3, 3, 3, 2, 3, 1, 2, 2, 3, 2, 3, 3, 2, 2, 3, 2, 3, 3, 1, 1, 1,\n",
-       "        2, 1, 1, 2, 1, 3, 3, 2, 2, 2, 3, 2, 3, 1, 3, 3, 3, 1, 2, 3, 3, 3,\n",
-       "        1, 3, 2, 2, 3, 3, 1, 3, 2, 3, 3, 3, 1, 3, 1, 2, 1, 3, 3, 3, 3, 3,\n",
+       "        2, 2, 1, 1, 1, 1, 1, 2, 2, 1, 1, 1]),\n",
+       " array([3, 2, 1, 3, 2, 3, 2, 2, 1, 3, 3, 3, 3, 3, 3, 3, 3, 3, 2, 3, 2, 1,\n",
+       "        3, 3, 3, 3, 2, 3, 1, 1, 2, 3, 1, 3, 3, 2, 2, 3, 2, 3, 3, 1, 1, 1,\n",
+       "        2, 1, 1, 2, 1, 3, 3, 2, 2, 2, 3, 2, 3, 2, 1, 3, 1, 1, 1, 3, 3, 3,\n",
+       "        1, 3, 2, 2, 3, 3, 1, 3, 2, 3, 3, 2, 1, 3, 1, 2, 1, 3, 3, 3, 3, 3,\n",
        "        3, 3, 2, 1, 1, 1, 1, 3, 3, 3, 2, 2]),\n",
-       " array([1, 3, 3, 1, 3, 3, 3, 3, 3, 2, 1, 1, 2, 1, 2, 2, 1, 1, 3, 3, 3, 1,\n",
-       "        2, 1, 2, 1, 3, 2, 3, 3, 3, 2, 3, 1, 1, 3, 3, 1, 3, 1, 1, 3, 3, 3,\n",
-       "        3, 3, 3, 3, 3, 2, 2, 3, 3, 3, 2, 3, 2, 3, 1, 1, 1, 3, 3, 1, 1, 1,\n",
-       "        3, 1, 3, 3, 1, 2, 3, 2, 3, 2, 2, 1, 3, 1, 3, 3, 3, 1, 2, 1, 2, 1,\n",
-       "        2, 3, 3, 3, 3, 3, 3, 1, 1, 2, 3, 3])]"
+       " array([1, 3, 3, 1, 3, 3, 3, 3, 3, 2, 1, 1, 2, 1, 2, 2, 1, 1, 3, 2, 3, 3,\n",
+       "        2, 1, 2, 2, 3, 2, 3, 3, 3, 2, 3, 1, 1, 3, 3, 1, 3, 1, 1, 3, 3, 3,\n",
+       "        3, 3, 3, 3, 3, 2, 2, 3, 3, 3, 2, 3, 2, 3, 3, 1, 3, 3, 3, 1, 1, 1,\n",
+       "        3, 1, 3, 3, 1, 2, 3, 2, 3, 2, 2, 3, 3, 1, 3, 3, 3, 1, 2, 1, 2, 1,\n",
+       "        2, 3, 3, 3, 3, 3, 3, 1, 1, 3, 3, 3])]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
