--- a/tutorials/Tuning.ipynb
+++ b/tutorials/Tuning.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -101,10 +101,8 @@
       "[E:750]\tTrain Loss: 0.029\n",
       "[E:999]\tTrain Loss: 0.029\n",
       "Finished Training\n",
-      "Accuracy: 0.879\n",
-      "        y=1    y=2   \n",
-      " l=1    178    53    \n",
-      " l=2    68     701   \n",
+      "\n",
+      "Trained Label Model:\n",
       "Accuracy: 0.879\n",
       "Precision: 0.771\n",
       "Recall: 0.724\n",
@@ -112,6 +110,8 @@
       "        y=1    y=2   \n",
       " l=1    178    53    \n",
       " l=2    68     701   \n",
+      "\n",
+      "Majority Label Voter:\n",
       "Accuracy: 0.836\n",
       "Precision: 0.623\n",
       "Recall: 0.841\n",
@@ -128,12 +128,13 @@
     "label_model = LabelModel(k=2, seed=123)\n",
     "\n",
     "label_model.train_model(Ls[0], Y_dev=Ys[1], n_epochs=1000, print_every=250, lr=0.01, l2=1e-1)\n",
-    "score = label_model.score((Ls[1], Ys[1]))\n",
+    "print('\\nTrained Label Model:')\n",
     "scores = label_model.score((Ls[1], Ys[1]), metric=['accuracy', 'precision', 'recall', 'f1'])\n",
     "\n",
     "from metal.label_model.baselines import MajorityLabelVoter\n",
     "\n",
     "mv = MajorityLabelVoter(seed=123)\n",
+    "print('\\nMajority Label Voter:')\n",
     "scores = mv.score((Ls[1], Ys[1]), metric=['accuracy', 'precision', 'recall', 'f1'])\n",
     "Y_train_ps = label_model.predict_proba(Ls[0])"
    ]
@@ -742,7 +743,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
