--- a/tutorials/Basics.ipynb
+++ b/tutorials/Basics.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,18 +49,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -110,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,12 +142,14 @@
    "source": [
     "MeTaL comes with a number of analysis tools for investigating your label matrix. \n",
     "For example, you can view summary statistics for each labeling function.\n",
-    "If you have a dev set with gold labels, you can view the empirical accuracy of your functions, in addition to the core summary statistics such as coverage, overlaps, and conflicts."
+    "If you have a dev set with gold labels, you can view the empirical accuracy of your functions, in addition to the core summary statistics. If you do not have a dev set with gold labels, simply do not specify optional argument Y.\n",
+    "\n",
+    "Polarity is a list of classes that a labeling function (LF) predicts for one or more examples. Coverage is the fraction of examples that the labeling function predicts over (as opposed to labeling 0 to abstain). Overlaps is the fraction of examples that the labeling function predicts over that at least one other LF predicts over as well. Conflicts is the fraction of examples that the LF predicts as one class but at least one other LF predicts that same example as a different class. Correct, Incorrect, and Empirical Accuracy are all comparisons to the gold standard labels and thus omitted if Y is not specified."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -186,6 +179,9 @@
        "      <th>Coverage</th>\n",
        "      <th>Overlaps</th>\n",
        "      <th>Conflicts</th>\n",
+       "      <th>Correct</th>\n",
+       "      <th>Incorrect</th>\n",
+       "      <th>Emp. Acc.</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -195,6 +191,9 @@
        "      <td>0.700</td>\n",
        "      <td>0.700</td>\n",
        "      <td>0.655</td>\n",
+       "      <td>374</td>\n",
+       "      <td>326</td>\n",
+       "      <td>0.534286</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -202,6 +201,9 @@
        "      <td>0.735</td>\n",
        "      <td>0.735</td>\n",
        "      <td>0.700</td>\n",
+       "      <td>468</td>\n",
+       "      <td>267</td>\n",
+       "      <td>0.636735</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -209,6 +211,9 @@
        "      <td>0.744</td>\n",
        "      <td>0.744</td>\n",
        "      <td>0.701</td>\n",
+       "      <td>500</td>\n",
+       "      <td>244</td>\n",
+       "      <td>0.672043</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -216,6 +221,9 @@
        "      <td>0.748</td>\n",
        "      <td>0.748</td>\n",
        "      <td>0.706</td>\n",
+       "      <td>540</td>\n",
+       "      <td>208</td>\n",
+       "      <td>0.721925</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -223,6 +231,9 @@
        "      <td>0.719</td>\n",
        "      <td>0.719</td>\n",
        "      <td>0.675</td>\n",
+       "      <td>454</td>\n",
+       "      <td>265</td>\n",
+       "      <td>0.631433</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -230,6 +241,9 @@
        "      <td>0.746</td>\n",
        "      <td>0.746</td>\n",
        "      <td>0.696</td>\n",
+       "      <td>457</td>\n",
+       "      <td>289</td>\n",
+       "      <td>0.612601</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -237,6 +251,9 @@
        "      <td>0.762</td>\n",
        "      <td>0.762</td>\n",
        "      <td>0.728</td>\n",
+       "      <td>509</td>\n",
+       "      <td>253</td>\n",
+       "      <td>0.667979</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -244,6 +261,9 @@
        "      <td>0.796</td>\n",
        "      <td>0.796</td>\n",
        "      <td>0.744</td>\n",
+       "      <td>593</td>\n",
+       "      <td>203</td>\n",
+       "      <td>0.744975</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -251,6 +271,9 @@
        "      <td>0.811</td>\n",
        "      <td>0.811</td>\n",
        "      <td>0.756</td>\n",
+       "      <td>642</td>\n",
+       "      <td>169</td>\n",
+       "      <td>0.791615</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -258,26 +281,29 @@
        "      <td>0.784</td>\n",
        "      <td>0.784</td>\n",
        "      <td>0.735</td>\n",
+       "      <td>559</td>\n",
+       "      <td>225</td>\n",
+       "      <td>0.713010</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Polarity  Coverage  Overlaps  Conflicts\n",
-       "0   [1, 2]     0.700     0.700      0.655\n",
-       "1   [1, 2]     0.735     0.735      0.700\n",
-       "2   [1, 2]     0.744     0.744      0.701\n",
-       "3   [1, 2]     0.748     0.748      0.706\n",
-       "4   [1, 2]     0.719     0.719      0.675\n",
-       "5   [1, 2]     0.746     0.746      0.696\n",
-       "6   [1, 2]     0.762     0.762      0.728\n",
-       "7   [1, 2]     0.796     0.796      0.744\n",
-       "8   [1, 2]     0.811     0.811      0.756\n",
-       "9   [1, 2]     0.784     0.784      0.735"
+       "  Polarity  Coverage  Overlaps  Conflicts  Correct  Incorrect  Emp. Acc.\n",
+       "0   [1, 2]     0.700     0.700      0.655      374        326   0.534286\n",
+       "1   [1, 2]     0.735     0.735      0.700      468        267   0.636735\n",
+       "2   [1, 2]     0.744     0.744      0.701      500        244   0.672043\n",
+       "3   [1, 2]     0.748     0.748      0.706      540        208   0.721925\n",
+       "4   [1, 2]     0.719     0.719      0.675      454        265   0.631433\n",
+       "5   [1, 2]     0.746     0.746      0.696      457        289   0.612601\n",
+       "6   [1, 2]     0.762     0.762      0.728      509        253   0.667979\n",
+       "7   [1, 2]     0.796     0.796      0.744      593        203   0.744975\n",
+       "8   [1, 2]     0.811     0.811      0.756      642        169   0.791615\n",
+       "9   [1, 2]     0.784     0.784      0.735      559        225   0.713010"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +311,7 @@
    "source": [
     "from metal.analysis import lf_summary\n",
     "\n",
-    "lf_summary(Ls[1])"
+    "lf_summary(Ls[1],Y=Ys[1])"
    ]
   },
   {
@@ -334,12 +360,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When constructing a LabelModel, the only required argument is `k`, the cardinality of the task. For example, k=2 means a binary classification task."
+    "When constructing a LabelModel, the only required argument is `k`, the cardinality of the task. For example, k=2 means a binary classification task where 1 and 2 are the class labels, and 0 is reserved for an abstain."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -391,8 +417,8 @@
       "[E:475]\tTrain Loss: 0.002\n",
       "[E:499]\tTrain Loss: 0.002\n",
       "Finished Training\n",
-      "CPU times: user 28.9 s, sys: 28 ms, total: 28.9 s\n",
-      "Wall time: 617 ms\n"
+      "CPU times: user 39.4 s, sys: 8 ms, total: 39.4 s\n",
+      "Wall time: 899 ms\n"
      ]
     }
    ],
@@ -410,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -445,6 +471,7 @@
      "output_type": "stream",
      "text": [
       "Trained Label Model Metrics:\n",
+      "Accuracy: 0.879\n",
       "Precision: 0.764\n",
       "Recall: 0.736\n",
       "F1: 0.749\n",
@@ -456,12 +483,12 @@
    ],
    "source": [
     "print('Trained Label Model Metrics:')\n",
-    "scores = label_model.score((Ls[1], Ys[1]), metric=['precision', 'recall', 'f1'])"
+    "scores = label_model.score((Ls[1], Ys[1]), metric=['accuracy','precision', 'recall', 'f1'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +562,7 @@
        "       [0.38616869, 0.61383131]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -662,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -708,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -724,7 +751,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 32/32 [00:00<00:00, 72.20it/s, avg_loss=1.99] \n"
+      "100%|██████████| 32/32 [00:00<00:00, 128.71it/s, avg_loss=1.99] \n"
      ]
     },
     {
@@ -739,7 +766,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 32/32 [00:00<00:00, 92.37it/s, avg_loss=1.84] \n"
+      "100%|██████████| 32/32 [00:00<00:00, 93.97it/s, avg_loss=1.84]  \n"
      ]
     },
     {
@@ -753,7 +780,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 32/32 [00:00<00:00, 81.44it/s, avg_loss=1.82] \n"
+      "100%|██████████| 32/32 [00:00<00:00, 82.02it/s, avg_loss=1.82]  \n"
      ]
     },
     {
@@ -767,7 +794,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 32/32 [00:00<00:00, 99.92it/s, avg_loss=1.81] \n"
+      "100%|██████████| 32/32 [00:00<00:00, 97.49it/s, avg_loss=1.81]  \n"
      ]
     },
     {
@@ -781,7 +808,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 32/32 [00:00<00:00, 93.65it/s, avg_loss=1.81] \n"
+      "100%|██████████| 32/32 [00:00<00:00, 97.90it/s, avg_loss=1.81]  \n"
      ]
     },
     {
@@ -819,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
